--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,7 @@
 FROM ghcr.io/rocker-org/devcontainer/tidyverse:4
 
 RUN install2.r --error --skipinstalled --ncpus -2 \
+    UNCOVER \
     PhaseType \
     && rm -rf /tmp/downloaded_packages \
     && strip /usr/local/lib/R/site-library/*/libs/*.so
