Attempt to disable user auth

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,14 +1,14 @@
 FROM ghcr.io/rocker-org/devcontainer/tidyverse:4
 
 RUN install2.r --error --skipinstalled --ncpus -2 \
-    UNCOVER \
-    PhaseType \
+      UNCOVER \
+      PhaseType \
     && rm -rf /tmp/downloaded_packages \
     && strip /usr/local/lib/R/site-library/*/libs/*.so
 
 RUN DEBIAN_FRONTEND=noninteractive apt-get -qq -y update \
     && DEBIAN_FRONTEND=noninteractive apt-get -qq -y install \
-    libglpk-dev \
+      libglpk-dev \
     && DEBIAN_FRONTEND=noninteractive apt-get -qq -y clean \
     && rm -rf /var/lib/apt/lists/*
 
@@ -16,3 +16,6 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get -qq -y update \
 #    && pip install tensorflow \
 #    && pip install tensorflow-hub tensorflow-datasets scipy requests Pillow h5py pandas pydot \
 #    && echo "RETICULATE_PYTHON=/usr/bin/python3" >> /usr/local/lib/R/etc/Renviron.site
+
+RUN echo "auth-none=1" >> /etc/rstudio/rserver.conf \
+    && echo "USER=rstudio" >> /etc/environment
